--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-pdf/renderer": "^4.3.0",
+    "@uiw/react-md-editor": "^4.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "inngest": "^3.39.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
