--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.22.0",
@@ -35,6 +36,7 @@
     "inngest": "^3.39.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.516.0",
+    "marked": "^15.0.12",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
